--- a/projetos-front-end/style.css
+++ b/projetos-front-end/style.css
@@ -110,6 +110,22 @@ header{
     display: flex;
     justify-content: center;
 }
+
+/*  HERO */
+
+section#hero{
+    height: calc(100vh - 60px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #fff;
+}
+
+#hero h1{
+    font-size: 3rem;
+}
 /* responsividade*/
 
 @media(max-width: 992px){
